[project]
name = "hifi-gan"
version = "0.1.0"
requires-python = "==3.10.19"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "glob2>=0.7",
    "librosa==0.10.*",
    "numpy==1.26.*",
    "soundfile>=0.13.1",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

